feat(spring initializr proxy): read queryparams from request, fix malformed service.yaml